# svgen

./: .gitignore  .gitmodules  .isort.cfg  .pylintrc  LICENSE  Makefile  README.md  manifest.yaml  mypy.ini  pyproject.toml  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml
js/: .eslintrc.js  .gitignore  export.js  main.js  main_deleted.js  package.json  snippets.js
local/configs/: license.yaml  package.yaml  python.yaml
local/templates/: README.md.j2
local/variables/: package.yaml
requirements/: dev_requirements.txt
svgen/: __init__.py  __main__.py  app.py  cartesian.py  config.py  dev_requirements.txt  display.py  entry.py  inkscape.py  requirements.txt  script.py
svgen/attribute/: __init__.py  style.py  viewbox.py
svgen/cartesian/: __init__.py  angle.py  circle.py  mutate.py  plane.py  point.py  rectangle.py
svgen/cartesian/rectangle/: __init__.py  corner.py  grid.py
svgen/color/: __init__.py  alpha.py  conversion.py  hsl.py  numbers.py  resolve.py  rgb.py
svgen/color/theme/: __init__.py  manager.py  visualize.py
svgen/data/themes/: blue_gray.yaml  blue_gray_analogous1.yaml  blue_gray_analogous2.yaml  blue_gray_complementary.yaml  blue_gray_primary.yaml  blue_gray_triadic1.yaml  blue_gray_triadic2.yaml  bootstrap.yaml
svgen/element/: __init__.py  circle.py  line.py  rect.py  svg.py  text.py
svgen/element/html/: __init__.py
svgen/element/mixins/: __init__.py
svgen/generation/: images.py
svgen/shapes/: chip.py  pins.py
tasks/: conf.py
tasks/svgen/: chip.py  chip.yaml  default.py  default.yaml
tasks/svgen/lib/symbols/: __init__.py  text.py  vdoer.py
tests/: resources.py  test_display.py  test_entry.py
tests/attribute/: test_style.py  test_viewbox.py
tests/cartesian/: test_plane.py  test_rectangle.py
tests/color/: test_color.py  test_conversion.py  test_hsl.py  test_rgb.py
tests/color/theme/: test_theme.py  test_visualize.py
tests/data/: blue_gray.yaml  gray.yaml  sample.json  sample.py
tests/element/: test_circle.py  test_element.py  test_html.py  test_line.py  test_rect.py  test_svg.py
tests/shapes/: test_chip.py
