[build-system]
requires = ["vmklib", "wheel", "trove-classifiers"]

[project]
name = "svgen"
version = "0.2.1"
description = "A tool for working with scalable vector graphics."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
test = [
  "vmklib",
  "types-setuptools",
  "pylint",
  "flake8",
  "pytest",
  "pytest-cov",
  "mypy",
  "black",
  "isort"
]

[project.scripts]
svgen = "svgen.entry:main"
