[build-system]
requires = ["setuptools-wrapper", "trove-classifiers"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "svgen"
version = "0.7.5"
description = "A tool for working with scalable vector graphics."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Vaughn Kottler", email = "vaughn@libre-embedded.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughn@libre-embedded.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License"
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
  "pylint",
  "flake8",
  "black",
  "ruff",
  "mypy",
  "isort",
  "yamllint",
  "yambs",
  "vmklib>=2.0.3",
  "sphinx",
  "sphinx-book-theme",
  "setuptools-wrapper",
  "pytest"
]

[project.scripts]
svgen = "svgen.entry:main"
